# synapsec

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: CLAUDE.md  Cargo.toml  Dockerfile.dev
backend/migrations/: 001_initial_schema.sql  002_correlation_and_app_patterns.sql
backend/src/: lib.rs  main.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/errors/: mod.rs
backend/src/middleware/: auth.rs  mod.rs  rbac.rs
backend/src/models/: app_code_pattern.rs  application.rs  audit.rs  correlation_rule.rs  finding.rs  finding_dast.rs  finding_sast.rs  finding_sca.rs  mod.rs  pagination.rs  user.rs
backend/src/parsers/: jfrog_xray.rs  mod.rs  sarif.rs  sonarqube.rs  tenable_was.rs
backend/src/routes/: applications.rs  attack_chains.rs  auth.rs  correlation.rs  dashboard.rs  deduplication.rs  findings.rs  health.rs  ingestion.rs  mod.rs
backend/src/services/: app_code_resolver.rs  application.rs  attack_chains.rs  auth.rs  correlation.rs  correlation_service.rs  cross_dedup.rs  dashboard.rs  dedup_dashboard.rs  deduplication.rs  finding.rs  fingerprint.rs  ingestion.rs  lifecycle.rs  mod.rs  risk_score.rs
backend/tests/: full_pipeline_test.rs
backend/tests/fixtures/: correlation_dast_seed.csv  correlation_sast_seed.csv  correlation_sca_seed.json  jfrog_xray_sample.json  jfrog_xray_seed.json  sarif_sample.json  sonarqube_sample.csv  sonarqube_sample.json  tenable_was_sample.csv  tenable_was_seed.csv
docs/: ASOC_Market_Research_v1.md  ASOC_PRD_v1.md
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts  (+1 more)
(+83 files in other folders)
